# codegraph

./: .lazyspec.toml  Cargo.toml  README.md  out.txt  test.d2
docs/iterations/: ITERATION-001-project-indexing.md  ITERATION-002-symbol-trace.md  ITERATION-003-module-dependency-graph.md  ITERATION-004-symbol-reference-graph.md  ITERATION-005-d2-layer-linking-for-explorable-diagrams.md
docs/rfcs/: RFC-001-idea.md  RFC-002-exact-symbol-references.md
docs/stories/: STORY-001-project-indexing.md  STORY-002-symbol-trace.md  STORY-003-module-dependency-graph.md  STORY-004-symbol-reference-graph.md  STORY-005-d2-layer-linking-for-explorable-diagrams.md
src/: extract.rs  graph.rs  lib.rs  main.rs  parse.rs  render.rs  resolve.rs  traverse.rs  walk.rs
tests/: cli_layers_test.rs  cli_test.rs  cli_trace_test.rs  extract_test.rs  graph_test.rs  integration_test.rs  parse_test.rs  render_test.rs  resolve_test.rs  traverse_test.rs  walk_test.rs
