[package]
name = "codegraph"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codegraph"
path = "src/main.rs"

[lib]
name = "codegraph"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
petgraph = "0.6"
ignore = "0.4"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
